query params swagger added
